[gd_scene load_steps=61 format=2]

[ext_resource path="res://audio/creepy_noise.wav" type="AudioStream" id=1]
[ext_resource path="res://scenes/Character.tscn" type="PackedScene" id=2]
[ext_resource path="res://fonts/3117-font(1).ttf" type="DynamicFontData" id=3]
[ext_resource path="res://materials and shaders/shader1.tres" type="Material" id=4]
[ext_resource path="res://bgs/bg-1.png" type="Texture" id=5]
[ext_resource path="res://bgs/bl.png" type="Texture" id=6]
[ext_resource path="res://bgs/bg-end.png" type="Texture" id=7]
[ext_resource path="res://sprites/hate1.png" type="Texture" id=8]
[ext_resource path="res://sprites/hate2.png" type="Texture" id=9]
[ext_resource path="res://sprites/love.png" type="Texture" id=10]
[ext_resource path="res://sprites/shelf.png" type="Texture" id=11]
[ext_resource path="res://audio/voice/shelf.wav" type="AudioStream" id=12]
[ext_resource path="res://audio/voice/ser.wav" type="AudioStream" id=13]
[ext_resource path="res://sprites/youre-nothing.png" type="Texture" id=14]
[ext_resource path="res://sprites/plakat.png" type="Texture" id=15]
[ext_resource path="res://scripts/CanvasLayer.gd" type="Script" id=16]
[ext_resource path="res://roto_screens/pyra.png" type="Texture" id=17]
[ext_resource path="res://sprites/talk.png" type="Texture" id=18]
[ext_resource path="res://sprites/piano.png" type="Texture" id=19]
[ext_resource path="res://sprites/table.png" type="Texture" id=20]
[ext_resource path="res://sprites/chair.png" type="Texture" id=21]
[ext_resource path="res://sprites/man.png" type="Texture" id=22]
[ext_resource path="res://sprites/therapy.png" type="Texture" id=23]
[ext_resource path="res://sprites/petlya.png" type="Texture" id=24]
[ext_resource path="res://sprites/pill.png" type="Texture" id=25]
[ext_resource path="res://sprites/want.png" type="Texture" id=26]
[ext_resource path="res://sprites/pngwing.com(4).png" type="Texture" id=27]
[ext_resource path="res://materials and shaders/shader2.tres" type="Material" id=28]
[ext_resource path="res://sprites/clock.png" type="Texture" id=29]
[ext_resource path="res://sprites/blood-flows-down-screen-screensaver-background-mass-texture-similar-to-blood-red-blood-flows-down-screen-188135885.jpg" type="Texture" id=30]
[ext_resource path="res://scripts/Blood.gd" type="Script" id=31]
[ext_resource path="res://scripts/Node2D.gd" type="Script" id=32]
[ext_resource path="res://roto_screens/pistol_shoot/151.png" type="Texture" id=33]
[ext_resource path="res://roto_screens/pistol_shoot/5.png" type="Texture" id=34]
[ext_resource path="res://roto_screens/pistol_shoot/6.png" type="Texture" id=35]
[ext_resource path="res://roto_screens/pistol_shoot/11.png" type="Texture" id=36]
[ext_resource path="res://roto_screens/pistol_shoot/12.png" type="Texture" id=37]
[ext_resource path="res://roto_screens/pistol_shoot/8.png" type="Texture" id=38]
[ext_resource path="res://roto_screens/pistol_shoot/4.png" type="Texture" id=39]
[ext_resource path="res://roto_screens/pistol_shoot/7.png" type="Texture" id=40]
[ext_resource path="res://roto_screens/pistol_shoot/9.png" type="Texture" id=41]
[ext_resource path="res://roto_screens/pistol_shoot/10.png" type="Texture" id=42]
[ext_resource path="res://roto_screens/pistol_shoot/13.png" type="Texture" id=43]
[ext_resource path="res://roto_screens/pistol_shoot/14.png" type="Texture" id=44]
[ext_resource path="res://roto_screens/pistol_shoot/192.png" type="Texture" id=45]
[ext_resource path="res://roto_screens/pistol_shoot/17.png" type="Texture" id=46]
[ext_resource path="res://roto_screens/pistol_shoot/18.png" type="Texture" id=47]
[ext_resource path="res://roto_screens/pistol_shoot/193.png" type="Texture" id=48]
[ext_resource path="res://roto_screens/pistol_shoot/19.png" type="Texture" id=49]
[ext_resource path="res://roto_screens/pistol_shoot/16.png" type="Texture" id=50]
[ext_resource path="res://scenes/man_on_chair.gd" type="Script" id=51]
[ext_resource path="res://audio/pistol_start.wav" type="AudioStream" id=52]
[ext_resource path="res://audio/270332__littlerobotsoundfactory__hit-03.wav" type="AudioStream" id=53]

[sub_resource type="CanvasItemMaterial" id=9]
blend_mode = 2

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 203.5, 436.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 188.5, 135 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 67.5, 535.5 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ ExtResource( 49 ), ExtResource( 45 ), ExtResource( 48 ) ],
"loop": false,
"name": "pistol_end",
"speed": 1.0
}, {
"frames": [ ExtResource( 36 ), ExtResource( 37 ) ],
"loop": true,
"name": "pistol_idle",
"speed": 1.0
}, {
"frames": [ ExtResource( 39 ), ExtResource( 34 ), ExtResource( 35 ), ExtResource( 40 ), ExtResource( 38 ), ExtResource( 41 ), ExtResource( 42 ), ExtResource( 43 ), ExtResource( 44 ), ExtResource( 33 ) ],
"loop": false,
"name": "pistol_prepare",
"speed": 1.0
}, {
"frames": [ ExtResource( 50 ), ExtResource( 46 ), ExtResource( 47 ), ExtResource( 49 ) ],
"loop": false,
"name": "pistol_shoot",
"speed": 1.0
}, {
"frames": [ ExtResource( 17 ) ],
"loop": true,
"name": "pyra",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=4]
size = 63
outline_size = 6
font_data = ExtResource( 3 )

[sub_resource type="CanvasItemMaterial" id=10]
blend_mode = 3

[node name="Node2D" type="Node2D"]
script = ExtResource( 32 )

[node name="bg" type="Node2D" parent="."]
modulate = Color( 0.74902, 0.74902, 0.74902, 1 )
position = Vector2( 960, 0 )

[node name="Bl" type="Sprite" parent="bg"]
position = Vector2( -2156.74, 971 )
scale = Vector2( 3.43398, 5.19271 )
texture = ExtResource( 6 )

[node name="Bl2" type="Sprite" parent="bg"]
position = Vector2( 69356, 884 )
scale = Vector2( 3.43398, 5.19271 )
texture = ExtResource( 6 )

[node name="trigger" type="Node2D" parent="bg"]
position = Vector2( -960, 4 )

[node name="bg_side22" type="Sprite" parent="bg/trigger"]
position = Vector2( 4800, 536 )
texture = ExtResource( 5 )

[node name="bg_side2" type="Sprite" parent="bg/trigger"]
position = Vector2( 2880, 536 )
texture = ExtResource( 5 )
flip_h = true

[node name="trigger3" type="Node2D" parent="bg"]
position = Vector2( 2880, 4 )

[node name="bg_side22" type="Sprite" parent="bg/trigger3"]
position = Vector2( 4800, 536 )
texture = ExtResource( 5 )

[node name="bg_side2" type="Sprite" parent="bg/trigger3"]
position = Vector2( 2880, 536 )
texture = ExtResource( 5 )
flip_h = true

[node name="trigger4" type="Node2D" parent="bg"]
position = Vector2( 6720, 4 )

[node name="bg_side22" type="Sprite" parent="bg/trigger4"]
position = Vector2( 4800, 536 )
texture = ExtResource( 5 )

[node name="bg_side2" type="Sprite" parent="bg/trigger4"]
position = Vector2( 2880, 536 )
texture = ExtResource( 5 )
flip_h = true

[node name="trigger5" type="Node2D" parent="bg"]
position = Vector2( 10560, 4 )

[node name="bg_side22" type="Sprite" parent="bg/trigger5"]
position = Vector2( 4800, 536 )
texture = ExtResource( 5 )

[node name="bg_side2" type="Sprite" parent="bg/trigger5"]
position = Vector2( 2880, 536 )
texture = ExtResource( 5 )
flip_h = true

[node name="trigger6" type="Node2D" parent="bg"]
position = Vector2( 14400, 4 )

[node name="bg_side22" type="Sprite" parent="bg/trigger6"]
position = Vector2( 4800, 536 )
texture = ExtResource( 5 )

[node name="bg_side2" type="Sprite" parent="bg/trigger6"]
position = Vector2( 2880, 536 )
texture = ExtResource( 5 )
flip_h = true

[node name="trigger7" type="Node2D" parent="bg"]
position = Vector2( 18240, 4 )

[node name="bg_side22" type="Sprite" parent="bg/trigger7"]
position = Vector2( 4800, 536 )
texture = ExtResource( 5 )

[node name="bg_side2" type="Sprite" parent="bg/trigger7"]
position = Vector2( 2880, 536 )
texture = ExtResource( 5 )
flip_h = true

[node name="trigger8" type="Node2D" parent="bg"]
position = Vector2( 22080, 4 )

[node name="bg_side22" type="Sprite" parent="bg/trigger8"]
position = Vector2( 4800, 536 )
texture = ExtResource( 5 )

[node name="bg_side2" type="Sprite" parent="bg/trigger8"]
position = Vector2( 2880, 536 )
texture = ExtResource( 5 )
flip_h = true

[node name="trigger9" type="Node2D" parent="bg"]
position = Vector2( 25920, 4 )

[node name="bg_side22" type="Sprite" parent="bg/trigger9"]
position = Vector2( 4800, 536 )
texture = ExtResource( 5 )

[node name="bg_side2" type="Sprite" parent="bg/trigger9"]
position = Vector2( 2880, 536 )
texture = ExtResource( 5 )
flip_h = true

[node name="trigger10" type="Node2D" parent="bg"]
position = Vector2( 29760, 4 )

[node name="bg_side22" type="Sprite" parent="bg/trigger10"]
position = Vector2( 4800, 536 )
texture = ExtResource( 5 )

[node name="bg_side2" type="Sprite" parent="bg/trigger10"]
position = Vector2( 2880, 536 )
texture = ExtResource( 5 )
flip_h = true

[node name="trigger11" type="Node2D" parent="bg"]
position = Vector2( 33600, 4 )

[node name="bg_side22" type="Sprite" parent="bg/trigger11"]
position = Vector2( 4800, 536 )
texture = ExtResource( 5 )

[node name="bg_side2" type="Sprite" parent="bg/trigger11"]
position = Vector2( 2880, 536 )
texture = ExtResource( 5 )
flip_h = true

[node name="trigger12" type="Node2D" parent="bg"]
position = Vector2( 37440, 4 )

[node name="bg_side22" type="Sprite" parent="bg/trigger12"]
position = Vector2( 4800, 536 )
texture = ExtResource( 5 )

[node name="bg_side2" type="Sprite" parent="bg/trigger12"]
position = Vector2( 2880, 536 )
texture = ExtResource( 5 )
flip_h = true

[node name="trigger13" type="Node2D" parent="bg"]
position = Vector2( 41280, 4 )

[node name="bg_side22" type="Sprite" parent="bg/trigger13"]
position = Vector2( 4800, 536 )
texture = ExtResource( 5 )

[node name="bg_side2" type="Sprite" parent="bg/trigger13"]
position = Vector2( 2880, 536 )
texture = ExtResource( 5 )
flip_h = true

[node name="trigger14" type="Node2D" parent="bg"]
position = Vector2( 45120, 4 )

[node name="bg_side22" type="Sprite" parent="bg/trigger14"]
position = Vector2( 4800, 536 )
texture = ExtResource( 5 )

[node name="bg_side2" type="Sprite" parent="bg/trigger14"]
position = Vector2( 2880, 536 )
texture = ExtResource( 5 )
flip_h = true

[node name="trigger15" type="Node2D" parent="bg"]
position = Vector2( 48960, 4 )

[node name="bg_side22" type="Sprite" parent="bg/trigger15"]
position = Vector2( 4800, 536 )
texture = ExtResource( 5 )

[node name="bg_side2" type="Sprite" parent="bg/trigger15"]
position = Vector2( 2880, 536 )
texture = ExtResource( 5 )
flip_h = true

[node name="trigger16" type="Node2D" parent="bg"]
position = Vector2( 52800, 4 )

[node name="bg_side22" type="Sprite" parent="bg/trigger16"]
position = Vector2( 4800, 536 )
texture = ExtResource( 5 )

[node name="bg_side2" type="Sprite" parent="bg/trigger16"]
position = Vector2( 2880, 536 )
texture = ExtResource( 5 )
flip_h = true

[node name="trigger17" type="Node2D" parent="bg"]
position = Vector2( 56640, 4 )

[node name="bg_side22" type="Sprite" parent="bg/trigger17"]
position = Vector2( 4800, 536 )
texture = ExtResource( 5 )

[node name="bg_side2" type="Sprite" parent="bg/trigger17"]
position = Vector2( 2880, 536 )
texture = ExtResource( 5 )
flip_h = true

[node name="trigger18" type="Node2D" parent="bg"]
position = Vector2( 60480, 4 )

[node name="bg_side22" type="Sprite" parent="bg/trigger18"]
position = Vector2( 4800, 536 )
texture = ExtResource( 5 )

[node name="bg_side2" type="Sprite" parent="bg/trigger18"]
position = Vector2( 2880, 536 )
texture = ExtResource( 5 )
flip_h = true

[node name="Sprite" type="Sprite" parent="bg"]
position = Vector2( 0, 540 )
texture = ExtResource( 7 )

[node name="Sprite2" type="Sprite" parent="bg"]
position = Vector2( 67200, 540 )
texture = ExtResource( 7 )
flip_h = true

[node name="Pngwingcom(4)" type="Sprite" parent="bg"]
material = SubResource( 9 )
position = Vector2( 63382, 619 )
scale = Vector2( 1.53231, 1.35468 )
texture = ExtResource( 27 )

[node name="therapy" type="Node2D" parent="."]
position = Vector2( 39984, 35 )

[node name="Table" type="Sprite" parent="therapy"]
modulate = Color( 0.501961, 0.270588, 0, 1 )
position = Vector2( 1387.75, 815 )
scale = Vector2( 1.74055, 1.52601 )
texture = ExtResource( 20 )

[node name="Pill" type="Sprite" parent="therapy"]
position = Vector2( 1254, 694 )
scale = Vector2( 0.519901, 0.614583 )
texture = ExtResource( 25 )

[node name="Pill2" type="Sprite" parent="therapy"]
position = Vector2( 1411, 684 )
scale = Vector2( 0.519901, 0.614583 )
texture = ExtResource( 25 )

[node name="Pill3" type="Sprite" parent="therapy"]
position = Vector2( 1518, 671 )
scale = Vector2( 0.519901, 0.614583 )
texture = ExtResource( 25 )

[node name="Pill4" type="Sprite" parent="therapy"]
position = Vector2( 1469, 663 )
scale = Vector2( 0.519901, 0.614583 )
texture = ExtResource( 25 )

[node name="Pill5" type="Sprite" parent="therapy"]
position = Vector2( 1339, 688 )
scale = Vector2( 0.519901, 0.614583 )
texture = ExtResource( 25 )

[node name="Pill6" type="Sprite" parent="therapy"]
position = Vector2( 1294, 670 )
scale = Vector2( 0.519901, 0.614583 )
texture = ExtResource( 25 )

[node name="Pill7" type="Sprite" parent="therapy"]
position = Vector2( 1365, 652 )
scale = Vector2( 0.519901, 0.614583 )
texture = ExtResource( 25 )

[node name="Pill8" type="Sprite" parent="therapy"]
position = Vector2( 1430, 653 )
scale = Vector2( 0.519901, 0.614583 )
texture = ExtResource( 25 )

[node name="Pill9" type="Sprite" parent="therapy"]
position = Vector2( 1509, 640 )
scale = Vector2( 0.519901, 0.614583 )
texture = ExtResource( 25 )

[node name="Pill10" type="Sprite" parent="therapy"]
position = Vector2( 1290, 643 )
scale = Vector2( 0.519901, 0.614583 )
texture = ExtResource( 25 )

[node name="Therapy" type="Sprite" parent="therapy"]
modulate = Color( 0.721569, 0, 0, 1 )
position = Vector2( 1363, 430 )
texture = ExtResource( 23 )

[node name="piano" type="Node2D" parent="."]
position = Vector2( -73, 38 )

[node name="Piano" type="Sprite" parent="piano"]
position = Vector2( 32096.1, 762.25 )
scale = Vector2( 1.71697, 1.63105 )
texture = ExtResource( 19 )

[node name="Talk" type="Sprite" parent="piano"]
modulate = Color( 0.694118, 0, 0, 1 )
position = Vector2( 32079, 453 )
texture = ExtResource( 18 )

[node name="Clock" type="Sprite" parent="piano"]
position = Vector2( 27917.8, 684.5 )
scale = Vector2( 1.87615, 1.98696 )
texture = ExtResource( 29 )

[node name="petlya" type="Node2D" parent="."]
position = Vector2( 50273, 0 )

[node name="Petlya" type="Sprite" parent="petlya"]
position = Vector2( 1571.25, 223.5 )
scale = Vector2( 0.96087, 1.61754 )
texture = ExtResource( 24 )

[node name="Want" type="Sprite" parent="petlya"]
modulate = Color( 0.709804, 0, 0, 1 )
position = Vector2( 1623, 604 )
rotation = 0.0959494
texture = ExtResource( 26 )

[node name="man_on_chair" type="Node2D" parent="."]
position = Vector2( 62836, -18 )
script = ExtResource( 51 )

[node name="Chair" type="Sprite" parent="man_on_chair"]
modulate = Color( 0.501961, 0.258824, 0, 1 )
position = Vector2( 1583.25, 821.875 )
scale = Vector2( 1.02365, 1.58936 )
texture = ExtResource( 21 )

[node name="Man" type="Sprite" parent="man_on_chair"]
position = Vector2( 1488, 807 )
scale = Vector2( 1.29874, 1.52439 )
texture = ExtResource( 22 )

[node name="Area2D" type="Area2D" parent="man_on_chair"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="man_on_chair/Area2D"]
position = Vector2( 1502.5, 620.5 )
shape = SubResource( 11 )

[node name="sfx" type="AudioStreamPlayer" parent="man_on_chair"]
stream = ExtResource( 52 )

[node name="sfx_shoot" type="AudioStreamPlayer" parent="man_on_chair"]
stream = ExtResource( 53 )
pitch_scale = 0.05

[node name="plakati" type="Node2D" parent="."]
modulate = Color( 0.662745, 0, 0, 1 )
position = Vector2( 9562, -633 )

[node name="Plakat" type="Sprite" parent="plakati"]
position = Vector2( 9174, 1043 )
scale = Vector2( 1.52484, 1.26543 )
texture = ExtResource( 15 )

[node name="Plakat2" type="Sprite" parent="plakati"]
modulate = Color( 0.666667, 0, 0, 1 )
position = Vector2( 9314, 1211 )
scale = Vector2( 1.52484, 1.26543 )
texture = ExtResource( 15 )

[node name="Plakat3" type="Sprite" parent="plakati"]
position = Vector2( 9490, 1073 )
scale = Vector2( 1.52484, 1.26543 )
texture = ExtResource( 15 )

[node name="Plakat4" type="Sprite" parent="plakati"]
modulate = Color( 0.831373, 0, 0, 1 )
position = Vector2( 9618, 1357 )
scale = Vector2( 1.52484, 1.26543 )
texture = ExtResource( 15 )

[node name="Plakat5" type="Sprite" parent="plakati"]
position = Vector2( 9852, 1163 )
scale = Vector2( 1.52484, 1.26543 )
texture = ExtResource( 15 )

[node name="Plakat6" type="Sprite" parent="plakati"]
modulate = Color( 0.666667, 0, 0, 1 )
position = Vector2( 9684, 1021 )
scale = Vector2( 1.52484, 1.26543 )
texture = ExtResource( 15 )

[node name="Plakat7" type="Sprite" parent="plakati"]
position = Vector2( 9116, 1323 )
scale = Vector2( 1.52484, 1.26543 )
texture = ExtResource( 15 )

[node name="Plakat8" type="Sprite" parent="plakati"]
modulate = Color( 0.831373, 0, 0, 1 )
position = Vector2( 9870, 1363 )
scale = Vector2( 1.52484, 1.26543 )
texture = ExtResource( 15 )

[node name="Plakat9" type="Sprite" parent="plakati"]
modulate = Color( 0.666667, 0, 0, 1 )
position = Vector2( 9702, 1187 )
scale = Vector2( 1.52484, 1.26543 )
texture = ExtResource( 15 )

[node name="Plakat10" type="Sprite" parent="plakati"]
position = Vector2( 9442, 1287 )
scale = Vector2( 1.52484, 1.26543 )
texture = ExtResource( 15 )

[node name="Plakat11" type="Sprite" parent="plakati"]
modulate = Color( 0.831373, 0, 0, 1 )
position = Vector2( 9056, 1133 )
scale = Vector2( 1.52484, 1.26543 )
texture = ExtResource( 15 )

[node name="nothing" type="Sprite" parent="plakati"]
position = Vector2( 8324, 1211 )
scale = Vector2( 1.52484, 1.26543 )
texture = ExtResource( 14 )

[node name="words" type="Node2D" parent="."]
position = Vector2( 7751, -7 )

[node name="Sprite" type="Sprite" parent="words"]
modulate = Color( 1, 0, 0, 1 )
position = Vector2( 1062.21, 394.955 )
rotation = -0.136744
scale = Vector2( 1.35495, 1.12445 )
texture = ExtResource( 8 )

[node name="Sprite2" type="Sprite" parent="words"]
modulate = Color( 1, 0, 0, 1 )
position = Vector2( 1552, 710 )
rotation = 0.184025
scale = Vector2( 0.904546, 0.992013 )
texture = ExtResource( 9 )

[node name="Sprite3" type="Sprite" parent="words"]
modulate = Color( 1, 0, 0, 1 )
position = Vector2( 434, 739 )
rotation = -0.0145723
scale = Vector2( 0.904546, 0.992013 )
texture = ExtResource( 10 )

[node name="shelf" type="Node2D" parent="."]
position = Vector2( 5195, 9 )

[node name="area" type="Area2D" parent="shelf"]
position = Vector2( 3147, 236 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="shelf/area"]
position = Vector2( 475.5, 554 )
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="shelf"]
modulate = Color( 0.576471, 0.270588, 0, 1 )
position = Vector2( 3618, 812 )
scale = Vector2( 1.732, 1.50495 )
texture = ExtResource( 11 )

[node name="shelf_voice" type="AudioStreamPlayer" parent="shelf"]
stream = ExtResource( 12 )
volume_db = -80.0

[node name="walls" type="StaticBody2D" parent="."]
position = Vector2( 451, 244 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="walls"]
position = Vector2( -380.5, 291.5 )
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="walls"]
position = Vector2( 68589, 314 )
shape = SubResource( 1 )

[node name="ost" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )
autoplay = true
bus = "music"

[node name="ost2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )
bus = "music"

[node name="KinematicBody2D" parent="." instance=ExtResource( 2 )]
position = Vector2( 960, 370 )
speed = 10000

[node name="screens" type="AnimatedSprite" parent="KinematicBody2D"]
visible = false
position = Vector2( 4.94588e-05, 128.788 )
scale = Vector2( 2.15582, 2.27273 )
frames = SubResource( 7 )
animation = "pistol_idle"
playing = true
script = ExtResource( 16 )

[node name="Camera2D" type="Camera2D" parent="KinematicBody2D"]
position = Vector2( 0, 128.788 )
scale = Vector2( 0.337553, 0.407834 )
current = true

[node name="shader" type="Node2D" parent="KinematicBody2D"]
position = Vector2( -366.49, -93.9394 )
scale = Vector2( 0.718608, 0.757576 )
z_index = 10

[node name="ColorRect" type="ColorRect" parent="KinematicBody2D/shader"]
material = ExtResource( 4 )
margin_left = -451.0
margin_top = -246.0
margin_right = 1470.0
margin_bottom = 834.0

[node name="BackBufferCopy" type="BackBufferCopy" parent="KinematicBody2D/shader"]
copy_mode = 2

[node name="ColorRect2" type="ColorRect" parent="KinematicBody2D/shader"]
material = ExtResource( 28 )
margin_left = -451.0
margin_top = -246.0
margin_right = 1470.0
margin_bottom = 834.0

[node name="Label" type="Label" parent="KinematicBody2D"]
margin_left = -690.582
margin_top = -101.515
margin_right = 688.418
margin_bottom = -13.5151
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
align = 1
valign = 1
uppercase = true

[node name="Blood" type="Sprite" parent="."]
visible = false
material = SubResource( 10 )
position = Vector2( 34512.5, 549 )
scale = Vector2( 243.856, 6.975 )
texture = ExtResource( 30 )
script = ExtResource( 31 )

[node name="blood_trigger" type="Area2D" parent="Blood"]
position = Vector2( 102.559, -85.5914 )
scale = Vector2( 0.00410079, 0.143369 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Blood/blood_trigger"]
position = Vector2( 322, 600 )
shape = SubResource( 2 )

[connection signal="body_entered" from="man_on_chair/Area2D" to="man_on_chair" method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="shelf/area" to="." method="_on_shelf_body_entered"]
[connection signal="body_entered" from="shelf/area" to="KinematicBody2D/screens" method="_on_area_body_entered"]
[connection signal="body_exited" from="shelf/area" to="." method="_on_shelf_body_exited"]
[connection signal="body_entered" from="Blood/blood_trigger" to="Blood" method="_on_blood_trigger_body_entered"]
